# treys-dashboard

./: .env.example  .gitignore  ACTION_REQUIRED.md  AFTERNOON_STATUS_1220PM.md  AGENDA_STATUS_REPORT.md  AGENT_API.md  AI_DASHBOARD_CONTROL_GUIDE.md  AI_DEBUG_GUIDE.md  AI_INTEGRATION_README.md  AI_INTEGRATION_STATUS.md  BUILD_FIX_GUIDE.md  CLAUDE_STATUS_UPDATE.md  CLOUDFLARE_FUNCTIONS_README.md  COMPLETE-FIX-ALL.sh  COMPLETE_FIX_SUMMARY.md  COMPLETE_HANDOFF_FOR_FUTURE_CLAUDE.md  CRITICAL_TASK_ASSIGNMENTS.md  CURRENT_STATUS.md  DAY2_COMPLETE.md  DAY2_COORDINATION_UPDATE.md  DAY2_FINAL_REPORT.md  DAY2_QUICK_REFERENCE.md  DAY2_STATUS_CLAUDE.md  DAY2_STATUS_CODEX.md  DAY2_SUCCESS_REPORT.md  DAY3-4_ACHIEVEMENT_REPORT.md  DAY3-4_COORDINATION.md  DAY3-4_FINAL_STATUS.md  DAY3-4_STATUS_REPORT.md  DAY3_PLAN.md  DAY4_COMPLETE.md  DAY4_PROJECT_MANAGEMENT_PLAN.md  DAY4_QUICK_REFERENCE.md  DAY4_TEAM_SYNC.md  DAY5_PLAN.md  DAY6_1PM_STATUS.md  DAY6_ACTION_1015AM.md  DAY6_COORDINATION.md  DAY6_MOMENTUM_1030AM.md  DAY6_NOON_SYNC.md  (+152 more)
.claude/: team-sync.md
agent-client/: node-client.js  python-client.py  test-suite.sh
agent-tools/: anthropic-tools.json  openai-tools.json
backend/: websocket-mvp.js  websocket-server-template.js  websocket-server.js
functions/: events.ts  whatsapp-send.ts
migrations/: 0001_create_agenda.sql  0002_quick_actions_and_notes.sql  0003_calendar_sync.sql  0004_complete_schema.sql  0005_mission_control.sql  0006_final_integration.sql  0007_fix_agenda_sources.sql  0008_seed_quick_actions.sql  agent_control.sql
public/: _headers  (+6 more)
tauri/src-tauri/: Cargo.toml
(+499 files in other folders)
