[package]
name = "agenda-dashboard"
version = "1.0.0"
description = "Professional agenda dashboard with workflow tools"
authors = ["Your Name"]
license = ""
repository = ""
default-run = "agenda-dashboard"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "shell-open", "window-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]